Colab을 통해 생성됨

--- a/06_NN.ipynb
+++ b/06_NN.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO5JnDKtABK9C6+yqRzVQLm",
+      "authorship_tag": "ABX9TyNtgXhQ5EtRZslfYsUMF5zd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1122,10 +1122,48 @@
       "cell_type": "code",
       "source": [
         "# Train Test Split\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X,y, test_size=0.2)"
+        "X_train, X_test, y_train, y_test = train_test_split(X,y, test_size=0.2, random_state=41)"
       ],
       "metadata": {
         "id": "PEFBjET3oTQo"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Convert X features to float tensors\n",
+        "X_train=torch.FloatTensor(X_train)\n",
+        "x_test=torch.FloatTensor(X_test)"
+      ],
+      "metadata": {
+        "id": "ON0CiVURsjWO"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Convert y labels to tensors long\n",
+        "\n",
+        "y_train=torch.LongTensor(y_train)\n",
+        "y_test=torch.LongTensor(y_test)"
+      ],
+      "metadata": {
+        "id": "nb2sU0x4swOv"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# set the criterion of model to measure the error, how far off the predictions"
+      ],
+      "metadata": {
+        "id": "hltLbTUWs7NB"
       },
       "execution_count": null,
       "outputs": []
