Colab을 통해 생성됨

--- a/Chap04_0102.ipynb
+++ b/Chap04_0102.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPWZ9M/oIBb/Fb8wL2dkB3o",
+      "authorship_tag": "ABX9TyPDNAINOIYLynJJwL8IhbhT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -118,12 +118,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "l2NIeUFiOKCS",
-        "outputId": "ece96835-6788-4e7e-9ba7-70a2d70c1fdf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 388
-        }
+        },
+        "id": "l2NIeUFiOKCS",
+        "outputId": "ece96835-6788-4e7e-9ba7-70a2d70c1fdf"
       },
       "execution_count": 25,
       "outputs": [
@@ -163,22 +163,22 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "lIvcqQ2VLq6Q",
-        "outputId": "9d9d4e7a-08b3-4fd8-d9e8-8782258e5b5d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 433
-        }
+        },
+        "id": "lIvcqQ2VLq6Q",
+        "outputId": "26ddb2ab-2daa-4cbd-cdad-5ce21cf40115"
       },
-      "execution_count": 13,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-13-2b973f34f98c>:10: RuntimeWarning: divide by zero encountered in log\n",
+            "<ipython-input-26-90eaf986c7a6>:10: RuntimeWarning: divide by zero encountered in log\n",
             "  Y=np.log(X)\n",
-            "<ipython-input-13-2b973f34f98c>:11: RuntimeWarning: divide by zero encountered in log\n",
+            "<ipython-input-26-90eaf986c7a6>:11: RuntimeWarning: divide by zero encountered in log\n",
             "  Y1=-np.log(X)\n"
           ]
         },
@@ -196,9 +196,38 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def softmax(x):\n",
+        "  if x.ndim==2: #Batch process => x.shape =  (n,10)\n",
+        "    x = x.T #Transpose\n",
+        "    x = x - np.max(x, axis=0) # Max of Column!\n",
+        "    y = np.exp(x) / np.sum(np.exp(x), axis=0)\n",
+        "    return y.T\n",
+        "  x = x - np.max(x)\n",
+        "  return np.exp(x) / np.sum(np.exp(x))\n",
+        "\n",
+        "  ## 47:26"
+      ],
       "metadata": {
         "id": "hAMR2pYhMD_O"
+      },
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "d8xM38E0Wu8E"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "PneANsGrVILn"
       },
       "execution_count": null,
       "outputs": []
