Colab을 통해 생성됨

--- a/Chap04_0102.ipynb
+++ b/Chap04_0102.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNxk5wwnPQExTEfthBd3cRO",
+      "authorship_tag": "ABX9TyMCtpdD2+Xp7RSpNyauvGeL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -217,6 +217,17 @@
     {
       "cell_type": "markdown",
       "source": [
+        "[ML]\n",
+        "- 01 Train Data Use& Train\n",
+        "- 02 Output Loss Function => Find Parameter to Low Loss Function"
+      ],
+      "metadata": {
+        "id": "vnBmOcfWT1Ty"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "##Softmax"
       ],
       "metadata": {
@@ -397,12 +408,12 @@
         "    t = t.argmax(axis=1) #Extract Max in Rows in t\n",
         "\n",
         "  batch_size = y.shape[0] # get the batch size\n",
-        "  y = - np.sum ( np.log((y[np.arange(batch_size), t]) ) ) / batch_size # CEE Declare! + Array indexing"
+        "  y = - np.sum ( np.log(y[np.arange(batch_size), t]) +1e-7 ) / batch_size # CEE Declare! + Array indexing"
       ],
       "metadata": {
         "id": "of5M6ggKQL00"
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": []
     },
     {
