Colab을 통해 생성됨

--- a/Chap04_0102.ipynb
+++ b/Chap04_0102.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMCtpdD2+Xp7RSpNyauvGeL",
+      "authorship_tag": "ABX9TyP8kfVacW8e3V9Eq/vf8vO8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -413,7 +413,7 @@
       "metadata": {
         "id": "of5M6ggKQL00"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -576,6 +576,38 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Loss Function VS Accuracy\n",
+        "\n",
+        "Accuracy : 얼마나 정확한가 ( 상점 )\n",
+        "- 영어를 이해한다 :1\n",
+        "- 영어 이해 못한다 : 0\n",
+        "=> 불연속적\n",
+        "\n",
+        "LossFunction : 얼마나 틀렸는가 ( 벌점 )\n",
+        "- 영어 단어를 다른걸로 오역했다 : 2.4\n",
+        "- understand했다 : 0.001\n",
+        "\n",
+        "=>연속적\n",
+        "\n",
+        "\n",
+        "∴ Differential을 할 수있어야 역추적기법인, Back Propagation활용 가능!"
+      ],
+      "metadata": {
+        "id": "EWm33aainkYR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "IOj_rUe5oKBC"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
