Colab을 통해 생성됨

--- a/Chap04_03.ipynb
+++ b/Chap04_03.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPqEEaT1dO/xNKvEwGZ13YH",
+      "authorship_tag": "ABX9TyPTmAi9M1nBfrjG92ep0QM8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,6 +72,25 @@
       "source": [],
       "metadata": {
         "id": "W3SoWWkTe3QB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#*수치미분, Gradient*\n",
+        "[Lecture 8, Gradient](https://www.youtube.com/watch?v=Y_CQpSFH2oo)"
+      ],
+      "metadata": {
+        "id": "5C1AYKvIU6Tt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "_ZiRxdyRVBAt"
       },
       "execution_count": null,
       "outputs": []
