Colab을 통해 생성됨

--- a/Labs_04_04.ipynb
+++ b/Labs_04_04.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "V28",
-      "authorship_tag": "ABX9TyPzh/MOnjZv1qp91zu+vqmX",
+      "authorship_tag": "ABX9TyMNFS23gne+Xv4kVsfGnumW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -187,7 +187,7 @@
         "id": "FHDA8iwhCUdR",
         "outputId": "94bf7405-b604-46f4-cb6c-18b04706bbc6"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -263,7 +263,7 @@
         "id": "4cUuf3JMEyEN",
         "outputId": "30740dfe-29b6-4388-cb3d-d46fa2408c9b"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -304,7 +304,7 @@
         "id": "8yZAgTmoG0ca",
         "outputId": "13e9ad3c-f707-4c56-953b-5815848ecd79"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -325,10 +325,38 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "###About Gradient x,y\n",
+        "\n",
+        "\n",
+        "\n",
+        "> np.c_[ ] 를 활용하면 Column 으로써 활용 :\n",
+        "\n",
+        "↪ [[x0,y0], [x1,y1], ... , [xn,yn]]\n",
+        "- grad[:,0] => gradient, X\n",
+        "- grad[:.1] => gradient, Y\n",
+        "\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "> np.array( ) 를 활용하면 Rows 로써 활용 :\n",
+        "\n",
+        "↪ [[x0, x1, ... , xn], [y0, y1, ... , yn]]\n",
+        "- grad(0) => gradient, X\n",
+        "- grad(1) => gradient, Y"
+      ],
+      "metadata": {
+        "id": "HHGPDAzSPPac"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Jyek_2A7Om8C"
+        "id": "i6C2e9PXP6xU"
       },
       "execution_count": null,
       "outputs": []
