Colab을 통해 생성됨

--- a/Chap04_04 : gradient.ipynb
+++ b/Chap04_04 : gradient.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "V28",
-      "authorship_tag": "ABX9TyOFrWzXSIoIpVpxGMDWE630",
+      "authorship_tag": "ABX9TyOOZjN7JhVJahuOZovIMVO4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "2oXPVI-SxjDc"
       },
@@ -170,7 +170,7 @@
       "metadata": {
         "id": "OmAxOGgpx30b"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -195,12 +195,12 @@
       ],
       "metadata": {
         "id": "Briv5LukYe7D",
-        "outputId": "181276c1-8498-42ee-b35f-a193190c4e2f",
+        "outputId": "190e3411-bdcb-4051-d28f-a3acb45e8657",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -240,12 +240,12 @@
       ],
       "metadata": {
         "id": "5YN38al3g67N",
-        "outputId": "5ea7e7d2-9e8d-4192-c12b-59c31929f188",
+        "outputId": "4f0f854a-020b-428a-e3cb-b121e501406a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -332,19 +332,19 @@
       ],
       "metadata": {
         "id": "ThsNrj1PkXuo",
-        "outputId": "a0b721ae-5d1d-4d23-b180-69cb51b758b1",
+        "outputId": "c2369391-913a-43bf-c469-893583a3d771",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 510
         }
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-30-cd8875ec69f2>:63: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
+            "<ipython-input-5-cd8875ec69f2>:63: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
             "  plt.legend()\n"
           ]
         },
@@ -423,13 +423,13 @@
       ],
       "metadata": {
         "id": "voYuCW4B_TnV",
-        "outputId": "67742de5-460a-4649-85ad-5aaa1a7064b4",
+        "outputId": "d7968eef-adb8-4012-8f25-03d2bf580017",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         }
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -475,7 +475,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-31-b325465e3b9a>:27: RuntimeWarning: invalid value encountered in sqrt\n",
+            "<ipython-input-6-b325465e3b9a>:27: RuntimeWarning: invalid value encountered in sqrt\n",
             "  Z=np.sqrt(9-X**2-Y**2)\n"
           ]
         },
@@ -535,13 +535,13 @@
       ],
       "metadata": {
         "id": "5sjN1i4LJHH3",
-        "outputId": "503a0a1e-f94b-4584-ba0e-fce6cb83adc9",
+        "outputId": "5ac58cf6-2e57-4ef3-b498-7068e0d538fa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 845
         }
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "display_data",
@@ -600,19 +600,19 @@
       ],
       "metadata": {
         "id": "jgcISte_WHr7",
-        "outputId": "8ab46088-3e29-4e76-94bb-9b9ae4b1f0ab",
+        "outputId": "7723300e-ec21-41a2-a5af-c7fbd17e0847",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 510
         }
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-33-e3bf865d4eae>:18: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
+            "<ipython-input-8-e3bf865d4eae>:18: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
             "  plt.legend()\n"
           ]
         },
@@ -657,12 +657,12 @@
       ],
       "metadata": {
         "id": "qwel6F9oXb6N",
-        "outputId": "ce1e6893-a360-406f-fa45-0b2d29ffbc91",
+        "outputId": "267d9ba0-0bec-4787-9096-124f80b9ea47",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -788,13 +788,13 @@
       ],
       "metadata": {
         "id": "ABK1csufyPOb",
-        "outputId": "812472f7-5239-4788-a1ef-b7a6f5fd6fe7",
+        "outputId": "d2001263-a473-45e4-b8e7-dd1ba882908e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 449
         }
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -854,12 +854,12 @@
       ],
       "metadata": {
         "id": "k5UREqZE5FB6",
-        "outputId": "d44ca634-68c2-442d-f896-5e6369bf9c02",
+        "outputId": "e35db8eb-1264-4c6c-acaa-bc24086fb94d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -941,9 +941,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LR0f-13fyMN-",
-        "outputId": "b4b97e83-f433-4b8a-895a-ea147fa8630c"
+        "outputId": "4075c818-5679-4574-ca5f-a5dff5cbb5a0"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -952,9 +952,9 @@
             "Reference | Shared Reference \n",
             "\n",
             "[5, 2, 3]\n",
-            "<built-in method index of list object at 0x7ba6a810ef00>\n",
-            "<built-in method index of list object at 0x7ba6a810ef00>\n",
-            "<built-in method index of list object at 0x7ba6a810cdc0>\n",
+            "<built-in method index of list object at 0x7d860c4477c0>\n",
+            "<built-in method index of list object at 0x7d860c4477c0>\n",
+            "<built-in method index of list object at 0x7d860c447d00>\n",
             "[4, 2, 3]\n",
             "[4, 2, 3] \n",
             "\n",
@@ -1037,9 +1037,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0c247651-d6fd-4da7-dfb8-57123f0e0dbc"
+        "outputId": "48af1ec3-9576-4d09-da0a-695e7fb57b66"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -1071,7 +1071,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-38-170a6ce4b39a>:7: RuntimeWarning: overflow encountered in square\n",
+            "<ipython-input-13-170a6ce4b39a>:7: RuntimeWarning: overflow encountered in square\n",
             "  ft = np.sum(x**2 - x*4 + 2, axis=0)\n"
           ]
         }
@@ -1123,12 +1123,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 777
         },
         "id": "YlDuSX-ZbcRR",
-        "outputId": "150cca0d-df1d-4a8f-af80-9986f0d71805"
+        "outputId": "5823500b-110f-4d58-b3f7-f15d00c0494b"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1194,12 +1195,12 @@
       ],
       "metadata": {
         "id": "_-apFNdidl4J",
-        "outputId": "a976009f-82aa-47c4-b772-ff2e518b89e7",
+        "outputId": "b31605ed-3c0c-430c-ddcd-3c0733b87150",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1209,7 +1210,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 40
+          "execution_count": 15
         }
       ]
     },
@@ -1250,12 +1251,12 @@
       ],
       "metadata": {
         "id": "7UhN2NDpixrx",
-        "outputId": "bafa6b06-dab8-4198-bb99-9f1b1f0ba310",
+        "outputId": "c9523b58-1536-46f8-dc1e-9430d17bdaa0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -1386,9 +1387,9 @@
           "height": 843
         },
         "id": "itPVRrPquo_Y",
-        "outputId": "0001d9e6-f4b8-470e-f028-c542999da548"
+        "outputId": "2f1332f9-9f61-4cae-c2db-5bdce7ac10c6"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1479,19 +1480,19 @@
       ],
       "metadata": {
         "id": "vZbShosTWPEz",
-        "outputId": "395d044a-c7bd-4b07-a699-e0e8e0c10a1e",
+        "outputId": "cb516f9c-1e02-441a-e4a9-b0755443c2e7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 485
         }
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-43-ced491ade2cd>:24: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
+            "<ipython-input-18-ced491ade2cd>:24: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
             "  plt.legend()\n"
           ]
         },
@@ -1562,19 +1563,19 @@
       ],
       "metadata": {
         "id": "PAcP9dqXvWzT",
-        "outputId": "a64a162d-9be6-40ae-e939-9805e1d848c7",
+        "outputId": "39e24783-8d26-4c57-e7c7-ab2f2e87bc85",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[ 0.15595054  0.11416289 -0.27011343]\n",
-            " [ 0.23392581  0.17124434 -0.40517015]]\n"
+            "[[ 0.13461295  0.05828457 -0.19289753]\n",
+            " [ 0.20191943  0.08742686 -0.28934629]]\n"
           ]
         }
       ]
@@ -1604,6 +1605,45 @@
       ],
       "metadata": {
         "id": "g6b2AYSUfG80"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=np.array([[1,2,3],[0,0,0]])\n",
+        "b=np.array([[0,7,3],[2,4,0]])\n",
+        "c=np.array([0.4,0.7,0.4])\n",
+        "\n",
+        "print(f(a))\n",
+        "print(f(b))\n",
+        "print(f(c))\n",
+        "#그러면 lambda를 갖고있는 f는 상수함수 아닌가?"
+      ],
+      "metadata": {
+        "id": "UbZHUCkyr1P5",
+        "outputId": "c473a5f2-4a7d-454c-bf23-282314ccbdcf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.3878647208708301\n",
+            "0.3878647208708301\n",
+            "0.3878647208708301\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "cmHze8JSstfh"
       }
     },
     {
@@ -1651,6 +1691,22 @@
       "metadata": {
         "id": "rKT0t-YEH7SW"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "F4MsH9pAsqYh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "P6cBXVvSsDXc"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
