Colab을 통해 생성됨

--- a/Chap04_04 : gradient.ipynb
+++ b/Chap04_04 : gradient.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "V28",
-      "authorship_tag": "ABX9TyPy5qyrL1Ha17nM9wNogfNd",
+      "authorship_tag": "ABX9TyMN7R0M3H0pLD4s1W+NC/Z7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "2oXPVI-SxjDc"
       },
@@ -170,7 +170,7 @@
       "metadata": {
         "id": "OmAxOGgpx30b"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -200,7 +200,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -245,7 +245,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -338,7 +338,7 @@
           "height": 510
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -429,7 +429,7 @@
           "height": 1000
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -541,7 +541,7 @@
           "height": 845
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -606,7 +606,7 @@
           "height": 510
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -662,7 +662,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -794,7 +794,7 @@
           "height": 449
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -859,7 +859,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -943,7 +943,7 @@
         "id": "LR0f-13fyMN-",
         "outputId": "3ecd78f8-50ab-46bf-8fb5-a5b66ab84633"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1039,7 +1039,7 @@
         },
         "outputId": "58e7a2ab-a66c-489d-e8c6-33bffa924100"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1129,7 +1129,7 @@
         "id": "YlDuSX-ZbcRR",
         "outputId": "cd2867d8-4ca7-4c0d-f6ec-ae398b8907d3"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1200,7 +1200,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1256,7 +1256,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1389,7 +1389,7 @@
         "id": "itPVRrPquo_Y",
         "outputId": "4c705540-46ca-4c9d-e1ea-23ce1d2b6b39"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1486,7 +1486,7 @@
           "height": 485
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1570,7 +1570,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1641,7 +1641,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1688,7 +1688,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1845,7 +1845,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1856,6 +1856,34 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- lambda로 감싸는 이유\n",
+        "\n",
+        "\n",
+        "```\n",
+        "numerical_gradient(net.loss,net.W)\n",
+        "```\n",
+        "\n",
+        "=> 이런식으로 안됨 ❌\n",
+        "\n",
+        "net.loss는 x,t를 둘다 받아야하는데, numerical_gradient는 하나인자 W만 넣고, f(W)형태로 호출!\n",
+        "\n",
+        "```\n",
+        "f : lambda w : net.loss(x,t)\n",
+        "```\n",
+        "x,t는 고정되어서 W만 바뀌는 함수 f(W)이다!\n",
+        "\n",
+        "\n",
+        "\n",
+        "> lambda는 x와 t를 고정시킨후, W만 바꾸어가면서 loss가 어떻게 변하는지 측정하는 \"Wrapper함수\"\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "hDh_9_5spBZk"
+      }
     },
     {
       "cell_type": "markdown",
@@ -1914,7 +1942,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
