Colab을 통해 생성됨

--- a/Chap04_05_AvatarDL.ipynb
+++ b/Chap04_05_AvatarDL.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMXqesgp6gSLv9soOuMDR6A",
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyMklQYkYnXDaa97pIpxCYiT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -107,10 +109,10 @@
         "    W1, W2 = self.param['W1'], self.param['W2']\n",
         "    b1, b2 = self.param['b1'], self.param['b2']\n",
         "\n",
-        "    a1 = np.dot(x,W1) + b1\n",
-        "    z1 = sigmoid(a1)\n",
-        "    a2 = np.dot(z1, W2) + b2\n",
-        "    y = softmax(a2)\n",
+        "    a1 = np.dot(x,W1) + b1    #Affine\n",
+        "    z1 = sigmoid(a1)          #Sigmoid\n",
+        "    a2 = np.dot(z1, W2) + b2  #Affine\n",
+        "    y = softmax(a2)           #Softmax\n",
         "    return y\n",
         "  def accuracy(self, x,t):\n",
         "    y = self.predict(x)\n",
@@ -136,7 +138,7 @@
       "metadata": {
         "id": "R18EbCYdEMRB"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -145,7 +147,7 @@
       "metadata": {
         "id": "x1azUU3XEn5M"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -182,31 +184,45 @@
     {
       "cell_type": "code",
       "source": [
-        "net1 = TwoLayerNet(3,3,3)\n",
-        "net2 = TwoLayerNet(784, 50, 10)\n",
+        "net0 = TwoLayerNet(3,4,3)\n",
+        "net1 = TwoLayerNet(784, 50, 10)\n",
         "\n",
         "\n",
-        "print(net1.param)\n",
-        "#self.param['W1'] <= self : [InstanceName]\n"
+        "print(net0.param)\n",
+        "#self.param['W1'] <= self : [InstanceName]\n",
+        "\n",
+        "print(\"\\n\",\"W1 shape : \", net1.param['W1'].shape)\n",
+        "print(\"\\n\",\"b1 shape : \", net1.param['b1'].shape)\n",
+        "print(\"\\n\",\"W2 shape : \", net1.param['W2'].shape)\n",
+        "print(\"\\n\",\"b2 shape : \", net1.param['b2'].shape)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "WOVasTZW2D6T",
-        "outputId": "0656756d-6bd4-4fe3-c5b4-edafd83055a4"
+        "outputId": "53f1ed2e-cfd6-476b-8f4f-52a84536bbf3"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'W1': array([[ 0.0059    ,  0.01052897, -0.01720098],\n",
-            "       [ 0.00235379, -0.00452121,  0.01142356],\n",
-            "       [-0.0060354 , -0.0125119 ,  0.01671642]]), 'b1': array([0., 0., 0.]), 'W2': array([[-0.00774183, -0.00156592, -0.00240824],\n",
-            "       [-0.00683925, -0.00862371,  0.00965331],\n",
-            "       [-0.00449348, -0.0141222 , -0.00763615]]), 'b2': array([0., 0., 0.])}\n"
+            "{'W1': array([[-0.00059236, -0.01580628,  0.00845837,  0.00056991],\n",
+            "       [-0.00365479, -0.00047357,  0.01427259,  0.0139728 ],\n",
+            "       [-0.0193826 , -0.01606699,  0.00714868,  0.00180051]]), 'b1': array([0., 0., 0., 0.]), 'W2': array([[ 0.01433249,  0.01466469,  0.01539531],\n",
+            "       [-0.00680726,  0.00297574, -0.01027676],\n",
+            "       [-0.01262078, -0.006958  ,  0.00243161],\n",
+            "       [-0.01183137,  0.00849687, -0.00223422]]), 'b2': array([0., 0., 0.])}\n",
+            "\n",
+            " W1 shape :  (784, 50)\n",
+            "\n",
+            " b1 shape :  (50,)\n",
+            "\n",
+            " W2 shape :  (50, 10)\n",
+            "\n",
+            " b2 shape :  (10,)\n"
           ]
         }
       ]
@@ -228,6 +244,20 @@
       ],
       "metadata": {
         "id": "QJtI0PvB5mF5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "net0 shape :\n",
+        "- W1.shape : 3x4\n",
+        "- b1.shape : 4\n",
+        "- W2.shape : 4x3\n",
+        "- b2.shape : 3\n",
+        "(Input size = 3, hidden size = 4, Output size : 3)"
+      ],
+      "metadata": {
+        "id": "eF11tdgXBJU4"
       }
     },
     {
@@ -258,9 +288,48 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# net0.predict(np.array([1,2,3]))\n",
+        "net1.predict(np.random.randn(784))"
+      ],
+      "metadata": {
+        "id": "iaE_SBjF4uwv",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "97ae01da-2aab-46e9-9179-15f954c85e75"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.09771343, 0.09688696, 0.10154654, 0.09357497, 0.09593188,\n",
+              "       0.10318719, 0.10382211, 0.10441933, 0.10552589, 0.0973917 ])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Affine => Sigmoid => Affine => Soft Max를 거쳐서\n",
+        "\n",
+        "OutputSize, **10개로 나옴**!"
+      ],
+      "metadata": {
+        "id": "B8ApDlMFGlYt"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "iaE_SBjF4uwv"
+        "id": "7zctSLkBFz3E"
       },
       "execution_count": null,
       "outputs": []
