--- a/Chap04_05_AvatarDL.ipynb
+++ b/Chap04_05_AvatarDL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMklQYkYnXDaa97pIpxCYiT",
+      "authorship_tag": "ABX9TyP9DEQYTA35k3Wor1OXEfBw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -125,6 +125,7 @@
         "    y = self.predict(x)\n",
         "    loss = CEE(y,t)\n",
         "    return loss\n",
+        "\n",
         "  def numerical_gradient(self, x, t):\n",
         "    loss_w= lambda W : self.loss(x,t) # loss_w is like Function, Lambda W is Wrapper!\n",
         "\n",
@@ -138,7 +139,7 @@
       "metadata": {
         "id": "R18EbCYdEMRB"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -147,7 +148,7 @@
       "metadata": {
         "id": "x1azUU3XEn5M"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -203,7 +204,7 @@
         "id": "WOVasTZW2D6T",
         "outputId": "53f1ed2e-cfd6-476b-8f4f-52a84536bbf3"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -299,7 +300,7 @@
         },
         "outputId": "97ae01da-2aab-46e9-9179-15f954c85e75"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -323,6 +324,18 @@
       ],
       "metadata": {
         "id": "B8ApDlMFGlYt"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- Accuracy : Step Function, 무의미한 Differential\n",
+        "- Loss : Soft Function, 유의미한 Differential\n",
+        "\n",
+        "=> 학습 끝난 이후에는 Accuracy가 더 정확하게 정확도 얻을 수 있다"
+      ],
+      "metadata": {
+        "id": "634ZQSZ9NdJO"
       }
     },
     {
